--- a/templates/partials/main_nav.hbs
+++ b/templates/partials/main_nav.hbs
@@ -11,16 +11,17 @@
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" href="/about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Programming</a>
+          <a class="nav-link" href="/learn">Programming Courses</a>
         </li>
-         <li class="nav-item">
-          <a class="nav-link" href="#">Doubts Section</a>
+        <li class="nav-item">
+          <a class="nav-link" href="/projects">projects</a>
         </li>
+         
          <li class="nav-item">
-          <a class="nav-link" href="#">Register</a>
+          {{!-- <a class="nav-link" href="register">Register</a> --}}
         </li>
         {{!-- <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
