--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -3,7 +3,7 @@
   <div class="container-fluid">
    <div class="row">
        <div class="col-sm-12 col-md-12">
-        
+          <h1>Home page</h1>
        </div>
    </div>
   </div>
