--- a/templates/views/projects.hbs
+++ b/templates/views/projects.hbs
@@ -3,7 +3,7 @@
   <div class="container-fluid">
    <div class="row">
        <div class="col-sm-12 col-md-12">
-          <h1>This is about page</h1>
+         <h1>Projects</h1>
        </div>
    </div>
   </div>
