--- a/templates/partials/main_nav.hbs
+++ b/templates/partials/main_nav.hbs
@@ -14,7 +14,7 @@
           <a class="nav-link" href="/about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/learn">Programming Courses</a>
+          <a class="nav-link" href="/programm">Programming Courses</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/projects">projects</a>
