--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -13,13 +13,13 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="images/1.jpg" class="d-block w-100" alt="...">
+              <img src="images/1.jpg" class="d-block w-100" alt="1">
             </div>
             <div class="carousel-item">
-              <img src="images/2.jpg" class="d-block w-100" alt="...">
+              <img src="images/2.jpg" class="d-block w-100" alt="2">
             </div>
             <div class="carousel-item">
-              <img src="images/3.jpg" class="d-block w-100" alt="...">
+              <img src="images/3.jpg" class="d-block w-100" alt="3">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
