--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -5,6 +5,7 @@
      text-decoration: none !important;
      color:white ;
  }
- .carousel-item{
+ .carousel-item img{
+     width: 100%;
      height: 100vh !important;
  }
