--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -16,7 +16,7 @@
               <img src="images/1.jpg" class="d-block w-100" alt="1">
             </div>
             <div class="carousel-item">
-              <img src="images/2.jpg" class="d-block w-100" alt="2">
+              <img src="images/2.jpeg" class="d-block w-100" alt="2">
             </div>
             <div class="carousel-item">
               <img src="images/3.jpg" class="d-block w-100" alt="3">
