--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -1,9 +1,9 @@
 {{>head}}
 {{>main_nav}}
   <div class="container-fluid">
+    {{!-- corousal row --}}
    <div class="row">
-     
-       <div class="col-sm-12 col-md-12">
+      <div class="col-sm-12 col-md-12">
          {{!-- Corousal starts --}}
           <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-indicators">
@@ -34,5 +34,17 @@
         {{!-- Corousal Ends --}}
        </div>
    </div>
+   {{!-- corousal row ends --}}
+
+   {{!-- Content row --}}
+    <div class="row">
+      <div class="col-sm-12 col-md-6">
+        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, rerum natus? Voluptas iure alias labore doloremque laborum dolor at maiores, corporis nesciunt ipsum ipsa quia, porro molestias pariatur veniam dolorem.</p>
+     </div>
+      <div class="col-sm-12 col-md-6">
+
+      </div>
+    </div>
+  {{!-- Content row ending --}}
   </div>
 {{>footer}}
