--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -35,11 +35,16 @@
        </div>
    </div>
    {{!-- corousal row ends --}}
-
+   
    {{!-- Content row --}}
     <div class="row">
       <div class="col-sm-12 col-md-6">
-        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, rerum natus? Voluptas iure alias labore doloremque laborum dolor at maiores, corporis nesciunt ipsum ipsa quia, porro molestias pariatur veniam dolorem.</p>
+       <div class="card" style="width: 18rem;">
+        <div class="card-body">
+          <h5 class="card-title">Learn Here</h5>
+          <p class="card-text">We are trying to make easy to learn Programming languates</p>
+        </div>
+      </div>
      </div>
       <div class="col-sm-12 col-md-6">
 
