--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -39,7 +39,7 @@
    {{!-- Content row --}}
     <div class="row">
       <div class="col-sm-12 col-md-6">
-       <div class="card" style="width: 18rem;">
+       <div class="card" style="width:100%;">
         <div class="card-body">
           <h5 class="card-title">Learn Here</h5>
           <p class="card-text">We are trying to make easy to learn Programming languates</p>
